packages/lmao-rs/crates/lmao-macros/tests/compile_fail/unknown_kind.rs
use lmao_macros::define_log_schema;

define_log_schema!(pub BadSchema {
    status: floatish,
});

fn main() {}
